2007-05-23  Kai Tietz  <Kai.Tietz@onevision.com>

	* binutils-all/windres/html.rc: New.
	* binutils-all/windres/html.rsd: New.
	* binutils-all/windres/html1.hm: New.
	* binutils-all/windres/html2.hm: New.
	* binutils-all/windres/messagetable.rc: New.
	* binutils-all/windres/messagetable.rsd: New.
	* binutils-all/windres/MSG00001.bin: New.
	* binutils-all/windres/strtab2.rc: New.
	* binutils-all/windres/strtab2.rsd: New.
	* binutils-all/windres/version.rc: New.
	* binutils-all/windres/version.rsd: New.
	* binutils-all/windres/dialog.rsd: Fix expected results.

2007-05-17  Joseph Myers  <joseph@codesourcery.com>

	* binutils-all/strip-3.d: Strip .pdr section.

2007-05-15  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp: Only run needed-by-reloc test for ELF.

2007-05-11  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/needed-by-reloc.s: Use .long rather than .4byte.

2007-05-08  Mark Shinwell  <shinwell@codesourcery.com>

	* binutils-all/strip-3.d: Strip .ARM.attributes and .reginfo
	sections.

2007-05-02  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp (copy_setup): Don't perror, use send_log.
	(copy_executable): Return early if test2 is blank.
	Return unsupported rather than unresolved if we can't run
	executables.  Do test1 if we can compile.

2007-04-24  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>

	* binutils-all/objcopy.exp: Add test for stripping a symbol
	used in a relocation.
	* binutils-all/needed-by-reloc.s: New file.

2007-04-20  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>
	    Thomas de Lellis <tdel@windriver.com>

	* binutils-all/objcopy.exp: Add test for --reverse-bytes.

2007-04-21  Richard Earnshaw  <rearnsha@arm.com>

	* binutils-all/readelf.exp (regexp_diff): Delete.

2007-04-20  Richard Earnshaw  <rearnsha@arm.com>

	* binutils-all/arm/thumb2-cond.s: Allow for tab expansion by the pty.
	Rename the second test.
